--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="color_morado_light">#e0d9ed</color>
     <color name="color_gray">#b5b5b5</color>
     <color name="color_gray_light">#F5F5F5</color>
+    <color name="pink">#ca4eb4</color>
+    <color name="bluedrark">#03113A</color>
 </resources>
